"""Abstract class for Heuristic Hamming and Manhattan"""


class Heuristic:
    def calculate(self, node, goal):
        pass
