"""Abstract class - if we want to solve the puzzle with different algorithms than A-Star. SolverAstar inherits from
Solver. In Solver the solver function is defined. """
class Solver:
    def solve(self, puzzle):
        """
        :param puzzle: puzzle in general, contains start and goal state
        """
        pass
